--- a/chatbot-backend/package.json
+++ b/chatbot-backend/package.json
@@ -2,6 +2,7 @@
   "name": "chatbot-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
@@ -13,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fuse.js": "^7.0.0",
     "natural": "^8.0.1"
