--- a/chatbot-backend/package.json
+++ b/chatbot-backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fuse.js": "^7.0.0",
+    "mongoose": "^8.8.1",
     "natural": "^8.0.1"
   },
   "devDependencies": {
