--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "react-youtube": "^10.1.0"
   },
   "devDependencies": {
