--- a/frontend/vite-project/package.json
+++ b/frontend/vite-project/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.7",
+    "file-saver": "^2.0.5",
+    "pdfjs-dist": "3.8.162",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
